rook/devk8s/rook-ceph-ingress.yaml
# apiVersion: v1
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlIWmpDQ0JrNmdBd0lCQWdJTUYzZlcrQk9yMGZ2TDZSZlpNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1HWXhDekFKDQpCZ05WQkFZVEFrSkZNUmt3RndZRFZRUUtFeEJIYkc5aVlXeFRhV2R1SUc1MkxYTmhNVHd3T2dZRFZRUURFek5IDQpiRzlpWVd4VGFXZHVJRTl5WjJGdWFYcGhkR2x2YmlCV1lXeHBaR0YwYVc5dUlFTkJJQzBnVTBoQk1qVTJJQzBnDQpSekl3SGhjTk1UZ3dNVEE1TURjeU1ESTRXaGNOTVRrd016RTNNRGt3TXpBeldqQ0JsREVMTUFrR0ExVUVCaE1DDQpRMDR4RHpBTkJnTlZCQWdNQnVTNGl1YTF0ekVQTUEwR0ExVUVCd3dHNUxpSzVyVzNNUXN3Q1FZRFZRUUxEQUpKDQpWREUvTUQ [...]
#   tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQ0KTUlJRXBnSUJBQUtDQVFFQTJPL1dqZkE5Y3pOZEt1SXl4NHRXa0E3bk9CaG90ckhnUlNaMFJnVk84TDFRWXZVZQ0KektVSzdiZklZVWQrUmNmejR3ZGc4U29PV3FnNUs3TDVUaCtmb2thSlFqNUs0TksxNy9IQ3ZmQnFlMElZNnJFRA0KbFRlVGRyaWFhQVg1L3djZXl4VytMZnhJWXVPRXhtRWljMGFJK3I0UCtYNjJZY0pBbGRvVmFOSTdWbHh1WGR6Nw0KS291Mmdsb3JUVk53aXFIekJPclpqeGNWaXhhUVVJRXVWZ0N0Qk5abVRJMnZBd2lZZmNqNGNnQmlnYUE4aExWNQ0KemhvWmdzd2ZoN1p3YnB1aWxxNHJ4N1A1eUhjY2RnSFhlZjRXMUY2dHhHMTh5L3FJNnpZUEZqOFNySTk4SWFZaw0KZkJ [...]
# kind: Secret
# metadata:
#   name: universal-10010sh-cn-tls
#   namespace: rook-ceph
# type: Opaque
# ---

# Ingress for dashboard
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-ingress
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  # tls:
  # - hosts:
  #   - cephdashboard-internalk8s.10010sh.cn
  #   secretName: universal-10010sh-cn-tls
  rules:
  - host: cephdashboard-internalk8s.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 8443
